View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027731 | Open CASCADE | OCCT:Visualization | public | 2016-08-01 15:41 | 2016-12-09 16:38 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027731: Visualization, OpenGl_AspectMarker - handle fractional marker Scale when sharing resources | ||||
Description | Current code of OpenGl_AspectMarker::Resources::SpriteKeys() rounds the marker scale to the nearest integer number. However, some markers support fractional ratios (with step 0.5) leading to non-equal resources collision. This is reflected by continuous regressions of test case bugs/vis/bug23654_MarkersRecompute - the second image is unstable. It is because on second display (Graphic3d_CView::Activate() after creating a new view) the order of displayed markers is undefined (Graphic3d_StructureManager::myDisplayedStructure is NCollection_Map<Handle(Graphic3d_Structure)>) and thus, collided marker resources are initialized in arbitrary order. | ||||
Steps To Reproduce | bugs/vis/bug23654_MarkersRecompute | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug23654_MarkersRecompute | ||||
|
markers_KO.png (33,420 bytes) |
|
markers_OK.png (35,805 bytes) |
|
Note that bugs/vis/bug23654_MarkersRecompute reveals also another problem - since order of re-displayed objects is undefined, the label/marker overlaps in undefined order (a couple of pixels blinking). |
|
Branch CR27731 has been created by kgv. SHA-1: a9f089dab263d709bacfefd1f83687d1d6252291 Detailed log of new commits: Author: kgv Date: Mon Aug 1 17:15:52 2016 +0300 0027731: Visualization, OpenGl_AspectMarker - handle fractional marker Scale when sharing resources OpenGl_AspectMarker::Resources::SpriteKeys() now encodes decimal number of marker scale into resource key, since built-in markers are defined with 0.5 scale step. |
|
Patch is ready for review. |
|
Branch CR27731 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR27731 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: a9f089dab263d709bacfefd1f83687d1d6252291 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1132 Regressions/Differences: Not detected Testing cases: bugs vis bug23654_MarkersRecompute - OK http://occt-tests/CR27731-master-OCCT/Debian70-64/bugs/vis/bug23654_MarkersRecompute.html http://occt-tests/CR27731-master-OCCT/Windows-64-VC10/bugs/vis/bug23654_MarkersRecompute.html Testing on Linux: Total MEMORY difference: 90124282 / 90097678 [+0.03%] Total CPU difference: 19320.88999999996 / 19470.040000000092 [-0.77%] Testing on Windows: Total MEMORY difference: 57084324 / 57093912 [-0.02%] Total CPU difference: 18219.933993698705 / 18078.831089198848 [+0.78%] |
|
Branch CR27731 has been deleted by inv. SHA-1: a9f089dab263d709bacfefd1f83687d1d6252291 |
occt: master d509e5a4 2016-08-01 14:15:52 Committer: bugmaster Details Diff |
0027731: Visualization, OpenGl_AspectMarker - handle fractional marker Scale when sharing resources OpenGl_AspectMarker::Resources::SpriteKeys() now encodes decimal number of marker scale into resource key, since built-in markers are defined with 0.5 scale step. |
Affected Issues 0027731 |
|
mod - samples/tcl/markers.tcl | Diff File | ||
mod - src/OpenGl/OpenGl_AspectMarker.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-01 15:41 | kgv | New Issue | |
2016-08-01 15:41 | kgv | Assigned To | => kgv |
2016-08-01 15:41 | kgv | Product Version | 7.0.0 => 6.7.0 |
2016-08-01 15:50 | kgv | File Added: markers_KO.png | |
2016-08-01 15:51 | kgv | File Added: markers_OK.png | |
2016-08-01 16:58 | kgv | Note Added: 0056341 | |
2016-08-01 17:00 | kgv | Description Updated | |
2016-08-01 17:14 | git | Note Added: 0056342 | |
2016-08-01 17:15 | kgv | Note Added: 0056343 | |
2016-08-01 17:15 | kgv | Assigned To | kgv => san |
2016-08-01 17:15 | kgv | Status | new => resolved |
2016-08-01 18:19 | san | Note Added: 0056350 | |
2016-08-01 18:19 | san | Assigned To | san => bugmaster |
2016-08-01 18:19 | san | Status | resolved => reviewed |
2016-08-02 11:19 |
|
Assigned To | bugmaster => apv |
2016-08-03 09:17 |
|
Test case number | => bugs vis bug23654_MarkersRecompute |
2016-08-03 10:05 |
|
Note Added: 0056407 | |
2016-08-03 10:05 |
|
Assigned To | apv => bugmaster |
2016-08-03 10:05 |
|
Status | reviewed => tested |
2016-08-05 13:30 | bugmaster | Changeset attached | => occt master d509e5a4 |
2016-08-05 13:30 | bugmaster | Status | tested => verified |
2016-08-05 13:30 | bugmaster | Resolution | open => fixed |
2016-08-06 13:04 | kgv | Relationship added | related to 0026791 |
2016-08-26 16:25 | git | Note Added: 0057178 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |