0027731: Visualization, OpenGl_AspectMarker - handle fractional marker Scale when sharing resources

OpenGl_AspectMarker::Resources::SpriteKeys() now encodes decimal number of marker scale into resource key,
since built-in markers are defined with 0.5 scale step.